<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartQuiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue3"
            android:layout_marginTop="15dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingTop="10dp"
                android:contentDescription="@string/usersvg"
                app:srcCompat="@drawable/ic_user" />

        </LinearLayout>

        <TextView
            android:id="@+id/instructions_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:text="@string/instructions"/>

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/listofinstructions"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/bgyellow"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/AgreetoConditions"
                android:layout_marginTop="0dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:onClick="GoToQuestionPage"
                android:background="@color/TopBarColor"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:text="Start Quiz" />

        </RelativeLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>