<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo1"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/incompletedetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:background="@color/blue3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_iconmonstr_email_2" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="18sp"
                android:hint="Email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:background="@color/blue3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_icons8_lock" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="18sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:importantForAutofill="no" />
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@color/TopBarColor"
            android:onClick="ValidateLoginCredentials"
            android:text="@string/login" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/TopBarColor"
            android:background="@color/bgyellow"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:textSize="17sp"
            android:onClick="SignUpSwitch"
            android:text="@string/signup_prompt" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>